Changelog is sorted by date. Most recent changes are up top.
[2/8/2020]
* Remove patch introduced yesterday, patch is now available in core code.

[1/8/2020]
* Fix broken UpdateTagCategoryJob due to a symbol causing issues. This introduces a new patch to the source code.

[29/7/2020]
* Fix favorite retrieval from database.

[13/7/2020]
* Disable SameSite cookie specifications (these cause issues with internal IP access since SS cookie stuff needs HTTPS, which you can't exactly get on an IP)

[15/6/2020]
* Localize a ton of stuff (incl. e621 source code)
* Dockerhub builds
* Introduce new variables for secret key and token.

[13/6/2020]
* Add artist form patch.

[26/5/2020]
* Add ffmpeg to docker install process
* Add dependencies for ffmpeg/libvips to docker install process

[6/5/2020]

* Fix seeding of database, removed need for migration patchs
* Increase default docker-compose-wait timeout to 180 seconds
* Removing stray pids folder on startup (fixes remnants of previous process preventing unicorn from starting)

[5/5/2020]
* Updated extra required tag region in patch
* Reduced steps in dockerfile from 42 to 28
* Added patch to lower the amount of required tags in the uploader.
* Initial publication of dockerfile.