@@ -1,8 +1,8 @@
 if [ ! -f /app/public/data/ran_setup.txt ]; then
     echo "Creating database"
     bundle exec rake db:create
-#    echo "Importing structure"
-#    bundle exec rake db:structure:load
+    echo "Importing structure"
+    bundle exec rake db:structure:load
     echo "Running migrations"
     bundle exec rake db:migrate
     echo "Running setup"
